<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bar"
        style="@style/TitleBar_Bar">

        <TextView
            android:id="@+id/title"
            style="@style/TitleBar_Title"
            android:text="@string/title_zhuanmaidian"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/menu"
            style="@style/TitleBar_Button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/icon_menu"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fff">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/imageview_size"
                    android:layout_height="@dimen/imageview_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#3d4245"
                            android:textSize="16sp"
                            android:singleLine="true"/>

                        <TextView
                            android:id="@+id/position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#5f6461"
                            android:textSize="14sp"
                            android:singleLine="true"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/jieshao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#5f646e"
                        android:textSize="12sp"
                        android:maxLines="2"
                        android:ellipsize="end"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#3d4245"
                            android:textSize="12sp"
                            android:text="@string/hint_youhuixinxi"/>

                        <TextView
                            android:id="@+id/youhui"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#999"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#3d4245"
                            android:textSize="12sp"
                            android:text="@string/hint_huodongtese"/>

                        <TextView
                            android:id="@+id/miaoshu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#999"
                            android:textSize="12sp"
                            android:maxLines="2"
                            android:ellipsize="end"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/go"
                        android:layout_width="160dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_go"
                        android:textColor="#ff5000"
                        android:text="去专卖店"/>
                </LinearLayout>
x           </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:textColor="#3d4245"
                android:background="@drawable/header_bg"
                android:text="@string/title_suozailouceng" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <include layout="@layout/item_louceng"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:textColor="#3d4245"
                android:background="@drawable/header_bg"
                android:text="@string/title_xinpinremai" />

            <com.taobao.daogou.client.view.GridViewForScrollView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:scrollbars="none"
                android:listSelector="@android:color/transparent"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>